--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         kompose.service.type: nodeport
       ports:
         - '3306:3306'
+      restart: always
       volumes:
         - ./volume/mysql:/bitnami
       environment:
@@ -15,3 +16,24 @@ services:
         - MYSQL_DATABASE=sene
         - MYSQL_USER=seneuser
         - MYSQL_PASSWORD=password123
+
+  app:
+    build:
+      context: ..
+      dockerfile: deploy/Dockerfile
+    image: 'se_ne:local'
+    ports:
+      - '8000:8000'
+    restart: always
+    environment:
+    - APP_SECRET_KEY=randomsecurity
+    - APP_GOOGLE_MAP_API_KEY=pass
+    - APP_GOOGLE_CID=cid
+    - APP_GOOGLE_CSECRET=cid
+    - APP_DOMAIN=domain.com
+    - APP_EMAIL_PASSWORD=pass
+    - APP_EMAIL=pass@com.com
+    - APP_DB_HOST=mysql_host
+    - APP_DB_NAME=sene
+    - APP_DB_USERNAME=seneuser
+    - APP_DB_PASSWORD=password123
